Lab1/lab1-testsuite/lab1-test-dir/ParCpp.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.5 from ParCpp.y
-----------------------------------------------------------------------------

state 201 contains 1 shift/reduce conflicts.
state 202 contains 1 shift/reduce conflicts.
state 203 contains 1 shift/reduce conflicts.
state 252 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	%start_pDef -> Def                                 (1)
	%start_pArg -> Arg                                 (2)
	%start_pDecl -> Decl                               (3)
	%start_pStm3 -> Stm3                               (4)
	%start_pStm2 -> Stm2                               (5)
	%start_pStm1 -> Stm1                               (6)
	%start_pStm -> Stm                                 (7)
	%start_pExp15 -> Exp15                             (8)
	%start_pExp14 -> Exp14                             (9)
	%start_pExp13 -> Exp13                             (10)
	%start_pExp12 -> Exp12                             (11)
	%start_pExp11 -> Exp11                             (12)
	%start_pExp10 -> Exp10                             (13)
	%start_pExp9 -> Exp9                               (14)
	%start_pExp8 -> Exp8                               (15)
	%start_pExp4 -> Exp4                               (16)
	%start_pExp3 -> Exp3                               (17)
	%start_pExp2 -> Exp2                               (18)
	%start_pExp1 -> Exp1                               (19)
	%start_pType -> Type                               (20)
	%start_pQuaConstElem -> QuaConstElem               (21)
	%start_pQualifiedConstant -> QualifiedConstant     (22)
	%start_pExp -> Exp                                 (23)
	%start_pExp5 -> Exp5                               (24)
	%start_pExp6 -> Exp6                               (25)
	%start_pExp7 -> Exp7                               (26)
	%start_pListExp -> ListExp                         (27)
	%start_pListArg -> ListArg                         (28)
	%start_pListDecl -> ListDecl                       (29)
	%start_pListString -> ListString                   (30)
	%start_pListQuaConstElem -> ListQuaConstElem       (31)
	%start_pListDef -> ListDef                         (32)
	%start_pListStm1 -> ListStm1                       (33)
	Integer -> L_integ                                 (34)
	Double -> L_doubl                                  (35)
	Char -> L_charac                                   (36)
	String -> L_quoted                                 (37)
	Id -> L_Id                                         (38)
	Program -> ListDef                                 (39)
	Def -> Type Id '(' ListArg ')' '{' ListStm1 '}'    (40)
	Def -> Type Id '(' ListArg ')' ';'                 (41)
	Def -> Stm3                                        (42)
	Def -> 'using' QualifiedConstant ';'               (43)
	Arg -> Type                                        (44)
	Arg -> 'const' Type                                (45)
	Arg -> Type Id                                     (46)
	Arg -> Type Id '=' Exp                             (47)
	Arg -> 'const' Type Id                             (48)
	Decl -> Id                                         (49)
	Decl -> Id '=' Exp                                 (50)
	Stm3 -> 'const' Type ListDecl ';'                  (51)
	Stm3 -> 'typedef' Type Id ';'                      (52)
	Stm3 -> Type ListDecl ';'                          (53)
	Stm3 -> '(' Stm ')'                                (54)
	Stm2 -> Exp ';'                                    (55)
	Stm2 -> Stm3                                       (56)
	Stm1 -> 'return' Exp ';'                           (57)
	Stm1 -> 'while' '(' Exp ')' Stm                    (58)
	Stm1 -> 'do' Stm 'while' '(' Exp ')' Stm           (59)
	Stm1 -> 'for' '(' Stm3 Exp ';' Exp ')' Stm         (60)
	Stm1 -> 'if' '(' Exp ')' Stm                       (61)
	Stm1 -> 'if' '(' Exp ')' Stm 'else' Stm            (62)
	Stm1 -> Stm2                                       (63)
	Stm -> '{' ListStm1 '}'                            (64)
	Stm -> ';'                                         (65)
	Stm -> Stm1                                        (66)
	Exp15 -> Integer                                   (67)
	Exp15 -> Double                                    (68)
	Exp15 -> ListString                                (69)
	Exp15 -> Char                                      (70)
	Exp15 -> 'true'                                    (71)
	Exp15 -> 'false'                                   (72)
	Exp15 -> QualifiedConstant                         (73)
	Exp15 -> '(' Exp ')'                               (74)
	Exp14 -> Exp14 '(' ListExp ')'                     (75)
	Exp14 -> Exp14 '[' Exp ']'                         (76)
	Exp14 -> Exp14 '.' Exp15                           (77)
	Exp14 -> Exp14 '->' Exp15                          (78)
	Exp14 -> Exp14 '++'                                (79)
	Exp14 -> Exp14 '--'                                (80)
	Exp14 -> Exp15                                     (81)
	Exp13 -> '++' Exp13                                (82)
	Exp13 -> '--' Exp13                                (83)
	Exp13 -> '*' Exp13                                 (84)
	Exp13 -> '!' Exp13                                 (85)
	Exp13 -> Exp14                                     (86)
	Exp12 -> Exp12 '*' Exp13                           (87)
	Exp12 -> Exp12 '/' Exp13                           (88)
	Exp12 -> Exp12 '%' Exp13                           (89)
	Exp12 -> Exp13                                     (90)
	Exp11 -> Exp11 '+' Exp12                           (91)
	Exp11 -> Exp11 '-' Exp12                           (92)
	Exp11 -> Exp12                                     (93)
	Exp10 -> Exp10 '<<' Exp11                          (94)
	Exp10 -> Exp10 '>>' Exp11                          (95)
	Exp10 -> Exp11                                     (96)
	Exp9 -> Exp9 '<' Exp10                             (97)
	Exp9 -> Exp9 '>' Exp10                             (98)
	Exp9 -> Exp9 '<=' Exp10                            (99)
	Exp9 -> Exp9 '>=' Exp10                            (100)
	Exp9 -> Exp10                                      (101)
	Exp8 -> Exp8 '==' Exp9                             (102)
	Exp8 -> Exp8 '!=' Exp9                             (103)
	Exp8 -> Exp9                                       (104)
	Exp4 -> Exp4 '&&' Exp5                             (105)
	Exp4 -> Exp5                                       (106)
	Exp3 -> Exp3 '||' Exp4                             (107)
	Exp3 -> Exp4                                       (108)
	Exp2 -> Exp3 '=' Exp2                              (109)
	Exp2 -> Exp3 '-=' Exp2                             (110)
	Exp2 -> Exp3 '+=' Exp2                             (111)
	Exp2 -> Exp2 '?' Exp3 ':' Exp3                     (112)
	Exp2 -> Exp3                                       (113)
	Exp1 -> 'throw' Exp1                               (114)
	Exp1 -> Exp2                                       (115)
	Type -> Type '&'                                   (116)
	Type -> 'bool'                                     (117)
	Type -> 'double'                                   (118)
	Type -> 'int'                                      (119)
	Type -> 'void'                                     (120)
	Type -> 'char'                                     (121)
	Type -> QualifiedConstant                          (122)
	QuaConstElem -> Id                                 (123)
	QualifiedConstant -> ListQuaConstElem              (124)
	Exp -> Exp1                                        (125)
	Exp5 -> Exp6                                       (126)
	Exp6 -> Exp7                                       (127)
	Exp7 -> Exp8                                       (128)
	ListExp ->                                         (129)
	ListExp -> Exp                                     (130)
	ListExp -> Exp ',' ListExp                         (131)
	ListArg ->                                         (132)
	ListArg -> Arg                                     (133)
	ListArg -> Arg ',' ListArg                         (134)
	ListDecl -> Decl                                   (135)
	ListDecl -> Decl ',' ListDecl                      (136)
	ListString -> String                               (137)
	ListString -> String ListString                    (138)
	ListQuaConstElem -> QuaConstElem                   (139)
	ListQuaConstElem -> QuaConstElem '::' ListQuaConstElem   (140)
	ListDef ->                                         (141)
	ListDef -> ListDef Def                             (142)
	ListStm1 ->                                        (143)
	ListStm1 -> ListStm1 Stm1                          (144)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&'            { PT _ (TS _ 4) }
	'&&'           { PT _ (TS _ 5) }
	'('            { PT _ (TS _ 6) }
	')'            { PT _ (TS _ 7) }
	'*'            { PT _ (TS _ 8) }
	'+'            { PT _ (TS _ 9) }
	'++'           { PT _ (TS _ 10) }
	'+='           { PT _ (TS _ 11) }
	','            { PT _ (TS _ 12) }
	'-'            { PT _ (TS _ 13) }
	'--'           { PT _ (TS _ 14) }
	'-='           { PT _ (TS _ 15) }
	'->'           { PT _ (TS _ 16) }
	'.'            { PT _ (TS _ 17) }
	'/'            { PT _ (TS _ 18) }
	':'            { PT _ (TS _ 19) }
	'::'           { PT _ (TS _ 20) }
	';'            { PT _ (TS _ 21) }
	'<'            { PT _ (TS _ 22) }
	'<<'           { PT _ (TS _ 23) }
	'<='           { PT _ (TS _ 24) }
	'='            { PT _ (TS _ 25) }
	'=='           { PT _ (TS _ 26) }
	'>'            { PT _ (TS _ 27) }
	'>='           { PT _ (TS _ 28) }
	'>>'           { PT _ (TS _ 29) }
	'?'            { PT _ (TS _ 30) }
	'['            { PT _ (TS _ 31) }
	']'            { PT _ (TS _ 32) }
	'bool'         { PT _ (TS _ 33) }
	'char'         { PT _ (TS _ 34) }
	'const'        { PT _ (TS _ 35) }
	'do'           { PT _ (TS _ 36) }
	'double'       { PT _ (TS _ 37) }
	'else'         { PT _ (TS _ 38) }
	'false'        { PT _ (TS _ 39) }
	'for'          { PT _ (TS _ 40) }
	'if'           { PT _ (TS _ 41) }
	'int'          { PT _ (TS _ 42) }
	'return'       { PT _ (TS _ 43) }
	'throw'        { PT _ (TS _ 44) }
	'true'         { PT _ (TS _ 45) }
	'typedef'      { PT _ (TS _ 46) }
	'using'        { PT _ (TS _ 47) }
	'void'         { PT _ (TS _ 48) }
	'while'        { PT _ (TS _ 49) }
	'{'            { PT _ (TS _ 50) }
	'||'           { PT _ (TS _ 51) }
	'}'            { PT _ (TS _ 52) }
	L_integ        { PT _ (TI $$) }
	L_doubl        { PT _ (TD $$) }
	L_charac       { PT _ (TC $$) }
	L_quoted       { PT _ (TL $$) }
	L_Id           { PT _ (T_Id $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	%start_pDef     rule  1
	%start_pArg     rule  2
	%start_pDecl    rule  3
	%start_pStm3    rule  4
	%start_pStm2    rule  5
	%start_pStm1    rule  6
	%start_pStm     rule  7
	%start_pExp15   rule  8
	%start_pExp14   rule  9
	%start_pExp13   rule  10
	%start_pExp12   rule  11
	%start_pExp11   rule  12
	%start_pExp10   rule  13
	%start_pExp9    rule  14
	%start_pExp8    rule  15
	%start_pExp4    rule  16
	%start_pExp3    rule  17
	%start_pExp2    rule  18
	%start_pExp1    rule  19
	%start_pType    rule  20
	%start_pQuaConstElem rule  21
	%start_pQualifiedConstant rule  22
	%start_pExp     rule  23
	%start_pExp5    rule  24
	%start_pExp6    rule  25
	%start_pExp7    rule  26
	%start_pListExp rule  27
	%start_pListArg rule  28
	%start_pListDecl rule  29
	%start_pListString rule  30
	%start_pListQuaConstElem rule  31
	%start_pListDef rule  32
	%start_pListStm1 rule  33
	Integer         rule  34
	Double          rule  35
	Char            rule  36
	String          rule  37
	Id              rule  38
	Program         rule  39
	Def             rules 40, 41, 42, 43
	Arg             rules 44, 45, 46, 47, 48
	Decl            rules 49, 50
	Stm3            rules 51, 52, 53, 54
	Stm2            rules 55, 56
	Stm1            rules 57, 58, 59, 60, 61, 62, 63
	Stm             rules 64, 65, 66
	Exp15           rules 67, 68, 69, 70, 71, 72, 73, 74
	Exp14           rules 75, 76, 77, 78, 79, 80, 81
	Exp13           rules 82, 83, 84, 85, 86
	Exp12           rules 87, 88, 89, 90
	Exp11           rules 91, 92, 93
	Exp10           rules 94, 95, 96
	Exp9            rules 97, 98, 99, 100, 101
	Exp8            rules 102, 103, 104
	Exp4            rules 105, 106
	Exp3            rules 107, 108
	Exp2            rules 109, 110, 111, 112, 113
	Exp1            rules 114, 115
	Type            rules 116, 117, 118, 119, 120, 121, 122
	QuaConstElem    rule  123
	QualifiedConstant rule  124
	Exp             rule  125
	Exp5            rule  126
	Exp6            rule  127
	Exp7            rule  128
	ListExp         rules 129, 130, 131
	ListArg         rules 132, 133, 134
	ListDecl        rules 135, 136
	ListString      rules 137, 138
	ListQuaConstElem rules 139, 140
	ListDef         rules 141, 142
	ListStm1        rules 143, 144

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'('            reduce using rule 141
	'bool'         reduce using rule 141
	'char'         reduce using rule 141
	'const'        reduce using rule 141
	'double'       reduce using rule 141
	'int'          reduce using rule 141
	'typedef'      reduce using rule 141
	'using'        reduce using rule 141
	'void'         reduce using rule 141
	L_Id           reduce using rule 141
	%eof           reduce using rule 141

	Program        goto state 137
	ListDef        goto state 138

State 1


	'('            shift, and enter state 130
	'bool'         shift, and enter state 53
	'char'         shift, and enter state 54
	'const'        shift, and enter state 119
	'double'       shift, and enter state 56
	'int'          shift, and enter state 57
	'typedef'      shift, and enter state 124
	'using'        shift, and enter state 136
	'void'         shift, and enter state 58
	L_Id           shift, and enter state 41

	Id             goto state 38
	Def            goto state 133
	Stm3           goto state 134
	Type           goto state 135
	QuaConstElem   goto state 39
	QualifiedConstantgoto state 50
	ListQuaConstElemgoto state 52

State 2


	'bool'         shift, and enter state 53
	'char'         shift, and enter state 54
	'const'        shift, and enter state 55
	'double'       shift, and enter state 56
	'int'          shift, and enter state 57
	'void'         shift, and enter state 58
	L_Id           shift, and enter state 41

	Id             goto state 38
	Arg            goto state 132
	Type           goto state 49
	QuaConstElem   goto state 39
	QualifiedConstantgoto state 50
	ListQuaConstElemgoto state 52

State 3


	L_Id           shift, and enter state 41

	Id             goto state 45
	Decl           goto state 131

State 4


	'('            shift, and enter state 130
	'bool'         shift, and enter state 53
	'char'         shift, and enter state 54
	'const'        shift, and enter state 119
	'double'       shift, and enter state 56
	'int'          shift, and enter state 57
	'typedef'      shift, and enter state 124
	'void'         shift, and enter state 58
	L_Id           shift, and enter state 41

	Id             goto state 38
	Stm3           goto state 129
	Type           goto state 114
	QuaConstElem   goto state 39
	QualifiedConstantgoto state 50
	ListQuaConstElemgoto state 52

State 5


	'!'            shift, and enter state 81
	'('            shift, and enter state 117
	'*'            shift, and enter state 83
	'++'           shift, and enter state 84
	'--'           shift, and enter state 85
	'bool'         shift, and enter state 53
	'char'         shift, and enter state 54
	'const'        shift, and enter state 119
	'double'       shift, and enter state 56
	'false'        shift, and enter state 86
	'int'          shift, and enter state 57
	'throw'        shift, and enter state 87
	'true'         shift, and enter state 88
	'typedef'      shift, and enter state 124
	'void'         shift, and enter state 58
	L_integ        shift, and enter state 35
	L_doubl        shift, and enter state 89
	L_charac       shift, and enter state 90
	L_quoted       shift, and enter state 44
	L_Id           shift, and enter state 41

	Integer        goto state 59
	Double         goto state 60
	Char           goto state 61
	String         goto state 42
	Id             goto state 38
	Stm3           goto state 110
	Stm2           goto state 128
	Exp15          goto state 62
	Exp14          goto state 63
	Exp13          goto state 64
	Exp12          goto state 65
	Exp11          goto state 66
	Exp10          goto state 67
	Exp9           goto state 68
	Exp8           goto state 69
	Exp4           goto state 70
	Exp3           goto state 71
	Exp2           goto state 72
	Exp1           goto state 73
	Type           goto state 114
	QuaConstElem   goto state 39
	QualifiedConstantgoto state 115
	Exp            goto state 116
	Exp5           goto state 76
	Exp6           goto state 77
	Exp7           goto state 78
	ListString     goto state 80
	ListQuaConstElemgoto state 52

State 6


	'!'            shift, and enter state 81
	'('            shift, and enter state 117
	'*'            shift, and enter state 83
	'++'           shift, and enter state 84
	'--'           shift, and enter state 85
	'bool'         shift, and enter state 53
	'char'         shift, and enter state 54
	'const'        shift, and enter state 119
	'do'           shift, and enter state 120
	'double'       shift, and enter state 56
	'false'        shift, and enter state 86
	'for'          shift, and enter state 121
	'if'           shift, and enter state 122
	'int'          shift, and enter state 57
	'return'       shift, and enter state 123
	'throw'        shift, and enter state 87
	'true'         shift, and enter state 88
	'typedef'      shift, and enter state 124
	'void'         shift, and enter state 58
	'while'        shift, and enter state 125
	L_integ        shift, and enter state 35
	L_doubl        shift, and enter state 89
	L_charac       shift, and enter state 90
	L_quoted       shift, and enter state 44
	L_Id           shift, and enter state 41

	Integer        goto state 59
	Double         goto state 60
	Char           goto state 61
	String         goto state 42
	Id             goto state 38
	Stm3           goto state 110
	Stm2           goto state 111
	Stm1           goto state 127
	Exp15          goto state 62
	Exp14          goto state 63
	Exp13          goto state 64
	Exp12          goto state 65
	Exp11          goto state 66
	Exp10          goto state 67
	Exp9           goto state 68
	Exp8           goto state 69
	Exp4           goto state 70
	Exp3           goto state 71
	Exp2           goto state 72
	Exp1           goto state 73
	Type           goto state 114
	QuaConstElem   goto state 39
	QualifiedConstantgoto state 115
	Exp            goto state 116
	Exp5           goto state 76
	Exp6           goto state 77
	Exp7           goto state 78
	ListString     goto state 80
	ListQuaConstElemgoto state 52

State 7


	'!'            shift, and enter state 81
	'('            shift, and enter state 117
	'*'            shift, and enter state 83
	'++'           shift, and enter state 84
	'--'           shift, and enter state 85
	';'            shift, and enter state 118
	'bool'         shift, and enter state 53
	'char'         shift, and enter state 54
	'const'        shift, and enter state 119
	'do'           shift, and enter state 120
	'double'       shift, and enter state 56
	'false'        shift, and enter state 86
	'for'          shift, and enter state 121
	'if'           shift, and enter state 122
	'int'          shift, and enter state 57
	'return'       shift, and enter state 123
	'throw'        shift, and enter state 87
	'true'         shift, and enter state 88
	'typedef'      shift, and enter state 124
	'void'         shift, and enter state 58
	'while'        shift, and enter state 125
	'{'            shift, and enter state 126
	L_integ        shift, and enter state 35
	L_doubl        shift, and enter state 89
	L_charac       shift, and enter state 90
	L_quoted       shift, and enter state 44
	L_Id           shift, and enter state 41

	Integer        goto state 59
	Double         goto state 60
	Char           goto state 61
	String         goto state 42
	Id             goto state 38
	Stm3           goto state 110
	Stm2           goto state 111
	Stm1           goto state 112
	Stm            goto state 113
	Exp15          goto state 62
	Exp14          goto state 63
	Exp13          goto state 64
	Exp12          goto state 65
	Exp11          goto state 66
	Exp10          goto state 67
	Exp9           goto state 68
	Exp8           goto state 69
	Exp4           goto state 70
	Exp3           goto state 71
	Exp2           goto state 72
	Exp1           goto state 73
	Type           goto state 114
	QuaConstElem   goto state 39
	QualifiedConstantgoto state 115
	Exp            goto state 116
	Exp5           goto state 76
	Exp6           goto state 77
	Exp7           goto state 78
	ListString     goto state 80
	ListQuaConstElemgoto state 52

State 8


	'('            shift, and enter state 82
	'false'        shift, and enter state 86
	'true'         shift, and enter state 88
	L_integ        shift, and enter state 35
	L_doubl        shift, and enter state 89
	L_charac       shift, and enter state 90
	L_quoted       shift, and enter state 44
	L_Id           shift, and enter state 41

	Integer        goto state 59
	Double         goto state 60
	Char           goto state 61
	String         goto state 42
	Id             goto state 38
	Exp15          goto state 109
	QuaConstElem   goto state 39
	QualifiedConstantgoto state 74
	ListString     goto state 80
	ListQuaConstElemgoto state 52

State 9


	'('            shift, and enter state 82
	'false'        shift, and enter state 86
	'true'         shift, and enter state 88
	L_integ        shift, and enter state 35
	L_doubl        shift, and enter state 89
	L_charac       shift, and enter state 90
	L_quoted       shift, and enter state 44
	L_Id           shift, and enter state 41

	Integer        goto state 59
	Double         goto state 60
	Char           goto state 61
	String         goto state 42
	Id             goto state 38
	Exp15          goto state 62
	Exp14          goto state 108
	QuaConstElem   goto state 39
	QualifiedConstantgoto state 74
	ListString     goto state 80
	ListQuaConstElemgoto state 52

State 10


	'!'            shift, and enter state 81
	'('            shift, and enter state 82
	'*'            shift, and enter state 83
	'++'           shift, and enter state 84
	'--'           shift, and enter state 85
	'false'        shift, and enter state 86
	'true'         shift, and enter state 88
	L_integ        shift, and enter state 35
	L_doubl        shift, and enter state 89
	L_charac       shift, and enter state 90
	L_quoted       shift, and enter state 44
	L_Id           shift, and enter state 41

	Integer        goto state 59
	Double         goto state 60
	Char           goto state 61
	String         goto state 42
	Id             goto state 38
	Exp15          goto state 62
	Exp14          goto state 63
	Exp13          goto state 107
	QuaConstElem   goto state 39
	QualifiedConstantgoto state 74
	ListString     goto state 80
	ListQuaConstElemgoto state 52

State 11


	'!'            shift, and enter state 81
	'('            shift, and enter state 82
	'*'            shift, and enter state 83
	'++'           shift, and enter state 84
	'--'           shift, and enter state 85
	'false'        shift, and enter state 86
	'true'         shift, and enter state 88
	L_integ        shift, and enter state 35
	L_doubl        shift, and enter state 89
	L_charac       shift, and enter state 90
	L_quoted       shift, and enter state 44
	L_Id           shift, and enter state 41

	Integer        goto state 59
	Double         goto state 60
	Char           goto state 61
	String         goto state 42
	Id             goto state 38
	Exp15          goto state 62
	Exp14          goto state 63
	Exp13          goto state 64
	Exp12          goto state 106
	QuaConstElem   goto state 39
	QualifiedConstantgoto state 74
	ListString     goto state 80
	ListQuaConstElemgoto state 52

State 12


	'!'            shift, and enter state 81
	'('            shift, and enter state 82
	'*'            shift, and enter state 83
	'++'           shift, and enter state 84
	'--'           shift, and enter state 85
	'false'        shift, and enter state 86
	'true'         shift, and enter state 88
	L_integ        shift, and enter state 35
	L_doubl        shift, and enter state 89
	L_charac       shift, and enter state 90
	L_quoted       shift, and enter state 44
	L_Id           shift, and enter state 41

	Integer        goto state 59
	Double         goto state 60
	Char           goto state 61
	String         goto state 42
	Id             goto state 38
	Exp15          goto state 62
	Exp14          goto state 63
	Exp13          goto state 64
	Exp12          goto state 65
	Exp11          goto state 105
	QuaConstElem   goto state 39
	QualifiedConstantgoto state 74
	ListString     goto state 80
	ListQuaConstElemgoto state 52

State 13


	'!'            shift, and enter state 81
	'('            shift, and enter state 82
	'*'            shift, and enter state 83
	'++'           shift, and enter state 84
	'--'           shift, and enter state 85
	'false'        shift, and enter state 86
	'true'         shift, and enter state 88
	L_integ        shift, and enter state 35
	L_doubl        shift, and enter state 89
	L_charac       shift, and enter state 90
	L_quoted       shift, and enter state 44
	L_Id           shift, and enter state 41

	Integer        goto state 59
	Double         goto state 60
	Char           goto state 61
	String         goto state 42
	Id             goto state 38
	Exp15          goto state 62
	Exp14          goto state 63
	Exp13          goto state 64
	Exp12          goto state 65
	Exp11          goto state 66
	Exp10          goto state 104
	QuaConstElem   goto state 39
	QualifiedConstantgoto state 74
	ListString     goto state 80
	ListQuaConstElemgoto state 52

State 14


	'!'            shift, and enter state 81
	'('            shift, and enter state 82
	'*'            shift, and enter state 83
	'++'           shift, and enter state 84
	'--'           shift, and enter state 85
	'false'        shift, and enter state 86
	'true'         shift, and enter state 88
	L_integ        shift, and enter state 35
	L_doubl        shift, and enter state 89
	L_charac       shift, and enter state 90
	L_quoted       shift, and enter state 44
	L_Id           shift, and enter state 41

	Integer        goto state 59
	Double         goto state 60
	Char           goto state 61
	String         goto state 42
	Id             goto state 38
	Exp15          goto state 62
	Exp14          goto state 63
	Exp13          goto state 64
	Exp12          goto state 65
	Exp11          goto state 66
	Exp10          goto state 67
	Exp9           goto state 103
	QuaConstElem   goto state 39
	QualifiedConstantgoto state 74
	ListString     goto state 80
	ListQuaConstElemgoto state 52

State 15


	'!'            shift, and enter state 81
	'('            shift, and enter state 82
	'*'            shift, and enter state 83
	'++'           shift, and enter state 84
	'--'           shift, and enter state 85
	'false'        shift, and enter state 86
	'true'         shift, and enter state 88
	L_integ        shift, and enter state 35
	L_doubl        shift, and enter state 89
	L_charac       shift, and enter state 90
	L_quoted       shift, and enter state 44
	L_Id           shift, and enter state 41

	Integer        goto state 59
	Double         goto state 60
	Char           goto state 61
	String         goto state 42
	Id             goto state 38
	Exp15          goto state 62
	Exp14          goto state 63
	Exp13          goto state 64
	Exp12          goto state 65
	Exp11          goto state 66
	Exp10          goto state 67
	Exp9           goto state 68
	Exp8           goto state 102
	QuaConstElem   goto state 39
	QualifiedConstantgoto state 74
	ListString     goto state 80
	ListQuaConstElemgoto state 52

State 16


	'!'            shift, and enter state 81
	'('            shift, and enter state 82
	'*'            shift, and enter state 83
	'++'           shift, and enter state 84
	'--'           shift, and enter state 85
	'false'        shift, and enter state 86
	'true'         shift, and enter state 88
	L_integ        shift, and enter state 35
	L_doubl        shift, and enter state 89
	L_charac       shift, and enter state 90
	L_quoted       shift, and enter state 44
	L_Id           shift, and enter state 41

	Integer        goto state 59
	Double         goto state 60
	Char           goto state 61
	String         goto state 42
	Id             goto state 38
	Exp15          goto state 62
	Exp14          goto state 63
	Exp13          goto state 64
	Exp12          goto state 65
	Exp11          goto state 66
	Exp10          goto state 67
	Exp9           goto state 68
	Exp8           goto state 69
	Exp4           goto state 101
	QuaConstElem   goto state 39
	QualifiedConstantgoto state 74
	Exp5           goto state 76
	Exp6           goto state 77
	Exp7           goto state 78
	ListString     goto state 80
	ListQuaConstElemgoto state 52

State 17


	'!'            shift, and enter state 81
	'('            shift, and enter state 82
	'*'            shift, and enter state 83
	'++'           shift, and enter state 84
	'--'           shift, and enter state 85
	'false'        shift, and enter state 86
	'true'         shift, and enter state 88
	L_integ        shift, and enter state 35
	L_doubl        shift, and enter state 89
	L_charac       shift, and enter state 90
	L_quoted       shift, and enter state 44
	L_Id           shift, and enter state 41

	Integer        goto state 59
	Double         goto state 60
	Char           goto state 61
	String         goto state 42
	Id             goto state 38
	Exp15          goto state 62
	Exp14          goto state 63
	Exp13          goto state 64
	Exp12          goto state 65
	Exp11          goto state 66
	Exp10          goto state 67
	Exp9           goto state 68
	Exp8           goto state 69
	Exp4           goto state 70
	Exp3           goto state 100
	QuaConstElem   goto state 39
	QualifiedConstantgoto state 74
	Exp5           goto state 76
	Exp6           goto state 77
	Exp7           goto state 78
	ListString     goto state 80
	ListQuaConstElemgoto state 52

State 18


	'!'            shift, and enter state 81
	'('            shift, and enter state 82
	'*'            shift, and enter state 83
	'++'           shift, and enter state 84
	'--'           shift, and enter state 85
	'false'        shift, and enter state 86
	'true'         shift, and enter state 88
	L_integ        shift, and enter state 35
	L_doubl        shift, and enter state 89
	L_charac       shift, and enter state 90
	L_quoted       shift, and enter state 44
	L_Id           shift, and enter state 41

	Integer        goto state 59
	Double         goto state 60
	Char           goto state 61
	String         goto state 42
	Id             goto state 38
	Exp15          goto state 62
	Exp14          goto state 63
	Exp13          goto state 64
	Exp12          goto state 65
	Exp11          goto state 66
	Exp10          goto state 67
	Exp9           goto state 68
	Exp8           goto state 69
	Exp4           goto state 70
	Exp3           goto state 71
	Exp2           goto state 99
	QuaConstElem   goto state 39
	QualifiedConstantgoto state 74
	Exp5           goto state 76
	Exp6           goto state 77
	Exp7           goto state 78
	ListString     goto state 80
	ListQuaConstElemgoto state 52

State 19


	'!'            shift, and enter state 81
	'('            shift, and enter state 82
	'*'            shift, and enter state 83
	'++'           shift, and enter state 84
	'--'           shift, and enter state 85
	'false'        shift, and enter state 86
	'throw'        shift, and enter state 87
	'true'         shift, and enter state 88
	L_integ        shift, and enter state 35
	L_doubl        shift, and enter state 89
	L_charac       shift, and enter state 90
	L_quoted       shift, and enter state 44
	L_Id           shift, and enter state 41

	Integer        goto state 59
	Double         goto state 60
	Char           goto state 61
	String         goto state 42
	Id             goto state 38
	Exp15          goto state 62
	Exp14          goto state 63
	Exp13          goto state 64
	Exp12          goto state 65
	Exp11          goto state 66
	Exp10          goto state 67
	Exp9           goto state 68
	Exp8           goto state 69
	Exp4           goto state 70
	Exp3           goto state 71
	Exp2           goto state 72
	Exp1           goto state 98
	QuaConstElem   goto state 39
	QualifiedConstantgoto state 74
	Exp5           goto state 76
	Exp6           goto state 77
	Exp7           goto state 78
	ListString     goto state 80
	ListQuaConstElemgoto state 52

State 20


	'bool'         shift, and enter state 53
	'char'         shift, and enter state 54
	'double'       shift, and enter state 56
	'int'          shift, and enter state 57
	'void'         shift, and enter state 58
	L_Id           shift, and enter state 41

	Id             goto state 38
	Type           goto state 97
	QuaConstElem   goto state 39
	QualifiedConstantgoto state 50
	ListQuaConstElemgoto state 52

State 21


	L_Id           shift, and enter state 41

	Id             goto state 38
	QuaConstElem   goto state 96

State 22


	L_Id           shift, and enter state 41

	Id             goto state 38
	QuaConstElem   goto state 39
	QualifiedConstantgoto state 95
	ListQuaConstElemgoto state 52

State 23


	'!'            shift, and enter state 81
	'('            shift, and enter state 82
	'*'            shift, and enter state 83
	'++'           shift, and enter state 84
	'--'           shift, and enter state 85
	'false'        shift, and enter state 86
	'throw'        shift, and enter state 87
	'true'         shift, and enter state 88
	L_integ        shift, and enter state 35
	L_doubl        shift, and enter state 89
	L_charac       shift, and enter state 90
	L_quoted       shift, and enter state 44
	L_Id           shift, and enter state 41

	Integer        goto state 59
	Double         goto state 60
	Char           goto state 61
	String         goto state 42
	Id             goto state 38
	Exp15          goto state 62
	Exp14          goto state 63
	Exp13          goto state 64
	Exp12          goto state 65
	Exp11          goto state 66
	Exp10          goto state 67
	Exp9           goto state 68
	Exp8           goto state 69
	Exp4           goto state 70
	Exp3           goto state 71
	Exp2           goto state 72
	Exp1           goto state 73
	QuaConstElem   goto state 39
	QualifiedConstantgoto state 74
	Exp            goto state 94
	Exp5           goto state 76
	Exp6           goto state 77
	Exp7           goto state 78
	ListString     goto state 80
	ListQuaConstElemgoto state 52

State 24


	'!'            shift, and enter state 81
	'('            shift, and enter state 82
	'*'            shift, and enter state 83
	'++'           shift, and enter state 84
	'--'           shift, and enter state 85
	'false'        shift, and enter state 86
	'true'         shift, and enter state 88
	L_integ        shift, and enter state 35
	L_doubl        shift, and enter state 89
	L_charac       shift, and enter state 90
	L_quoted       shift, and enter state 44
	L_Id           shift, and enter state 41

	Integer        goto state 59
	Double         goto state 60
	Char           goto state 61
	String         goto state 42
	Id             goto state 38
	Exp15          goto state 62
	Exp14          goto state 63
	Exp13          goto state 64
	Exp12          goto state 65
	Exp11          goto state 66
	Exp10          goto state 67
	Exp9           goto state 68
	Exp8           goto state 69
	QuaConstElem   goto state 39
	QualifiedConstantgoto state 74
	Exp5           goto state 93
	Exp6           goto state 77
	Exp7           goto state 78
	ListString     goto state 80
	ListQuaConstElemgoto state 52

State 25


	'!'            shift, and enter state 81
	'('            shift, and enter state 82
	'*'            shift, and enter state 83
	'++'           shift, and enter state 84
	'--'           shift, and enter state 85
	'false'        shift, and enter state 86
	'true'         shift, and enter state 88
	L_integ        shift, and enter state 35
	L_doubl        shift, and enter state 89
	L_charac       shift, and enter state 90
	L_quoted       shift, and enter state 44
	L_Id           shift, and enter state 41
